--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
         }
     ],
     "require": {
-        "php": "~7.1"
+        "php": "~7.1",
+        "symfony/console": "^4.1",
+        "symfony/yaml": "^4.0"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src"
+            "App\\":"src"
         }
     }
 }
