--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 version: '2'
 services:
   php-cli:
-    image: php:7.1-cli
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: php-cli
-    working_dir: /var/www
     volumes:
     - ./:/var/www
     links:
