--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "php": "~7.1",
         "symfony/console": "^4.1",
-        "symfony/yaml": "^4.0"
+        "symfony/yaml": "^4.0",
+        "phpoffice/phpspreadsheet": "^1.4"
     },
     "autoload": {
         "psr-4": {
